- Fix on Bug #62801 (mysql.dev) #13491698 Orabug DB Strange behaviour with Include in LINQ-to-Entities. Changes on SelectStatement class on method GetDefaultColumnsForFragment to asign the table name when adding a new column. Added UT VS2010 and VS2008.
- Fix for EF4.1, Code First, CreateDatabaseScript() generates an invalid MySQL script (MySQL bug #62150, Oracle bug #13582837).

Version 6.3.8
- Modified ProviderManifest.xml to map TIMESTAMP db fields to the DateTime .NET type (MySQL bug #55351, Oracle bug #12652602).
- Modified MySqlConnection.BeginTransaction to throw a NotSupportedException when Snapshot isolation level 
  is requested (MySQL bug #61589, Oracle bug #12698020).
- Modified SqlFragment.QuoteIdentifier to add MySQL quotes around identifiers (MySQL bug #61635, Oracle bug #12707285).
- Modified the SchemaDefinition-5.5.ssdl to treat char(36) columns as GUID (MySQL bug #61657, Oracle bug #12708208).
- Configured DataGridView to use VirtualMode and added some required events, so it can save back 
  to the data source the grid changes (MySQL bug #61617, Oracle bug #12711786).
- Modified ASP.NET membership provider to create and query all related tables using lowercase names (MySQL bug #61108, Oracle bug #12702009).
- Modified MySqlDataReader.Close to use Default behavior when clearing remaining resultsets (MySQL bug #61690, Oracle bug #12723423).
- Modified MySqlScript to enable correct processing of the DELIMITER command when not followed by 
  a new line (MySQL bug #61680, Oracle bug #12732279).
- On Model First changed column types generated in sql script to produce more suitable MySql types (MySql bug #59244, Oracle bug #12707104).
- Modified MySqlProviderServices.GetDbProviderManifestToken to use InvariantCulture when parsing the
  server version (MySQL bug #61901, Oracle bug #12831581)
- Added changes to correctly generate database on code first and test case, project MySql.Data.Entity.ModelFirst.Tests. While testing the fix corrected 